fix scrollbars

--- a/src/style.css
+++ b/src/style.css
@@ -8,7 +8,7 @@
 
 html {
     background-image: url("images/black.png");
-    overflow: scroll;
+    overflow-y: scroll;
 }
 
 
@@ -81,7 +81,8 @@ code {
     border-bottom-color: #676;
     display: block;
     margin-bottom: -10px;
-    overflow:scroll;
+    overflow-x: auto;
+    overflow-y: hidden;
 }
 
 main header {
